# yablog

./: .gitignore  README.md  TODO.md  manage.sh  pyproject.toml
src/: manage.py
src/api/: __init__.py  articles.py  urls.py
src/blog/: asgi.py  settings.py  urls.py  wsgi.py
src/blog_app/: admin.py  models.py  urls.py  views.py
src/blog_app/management/commands/: generate_test_data.py
src/blog_app/migrations/: 0001_initial.py  0002_article_creation_date_article_last_update_date.py  0003_articletag_alter_article_title_article_tags.py  0004_favoritearticle.py  0005_article_content_parsed_article_title_parsed.py  0006_auto_20250807_1850.py  0007_remove_article_title_parsed.py  0008_alter_article_tags.py  0009_article_blog_app_ar_slug_571615_idx_and_more.py
src/blog_app/static/css/: main.css
src/blog_app/templates/blog/: article_detail.html  articles.html  articles_by_tag.html  index.html
src/blog_app/templates/htmx/: favorites.html  other_articles.html  paginated_articles.html  search_results.html
src/blog_app/templates/shared/: base.html  nav.html  tags_list.html
src/blog_app/templatetags/: icons.py  inline_static.py
