[project]
name = "htmx-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-debug-toolbar>=6.0.0",
    "django-htmx>=1.23.2",
    "django>=5.2.4",
    "djangorestframework>=3.16.1",
    "faker>=37.5.3",
    "ipdb>=0.13.13",
    "markdown>=3.8.2",
    "pygments>=2.19.2",
    "ruff>=0.12.8",
]
